kube/postgresql/templates/primary/metrics-svc.yaml
---
# Source: postgresql/templates/primary/metrics-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pms-postgresql-metrics
  namespace: "default"
  labels:
    app.kubernetes.io/instance: pms-postgresql
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 16.2.0
    helm.sh/chart: postgresql-15.0.0
    app.kubernetes.io/component: metrics
  annotations:
    prometheus.io/port: "9187"
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http-metrics
      port: 9187
      targetPort: http-metrics
  selector:
    app.kubernetes.io/instance: pms-postgresql
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/component: primary
